--- a/cv.html
+++ b/cv.html
@@ -58,6 +58,8 @@
       </div>
     </nav>
     <div class="container-fluid mt-5">
+      <h1 class="display-3 mb-3 d-flex justify-content-center">Curriculum Vitae</h1>
+      <hr class="style-two">
       <p id="intro" class="lead text-left">My research interests are in the area of Cognitive Neuroscience, Artificial 
         Intelligence and Machine Learning and its application in Human-Machine Interaction and Neuro-Rehabilitation. I 
         have experience in developing intelligent neurotechnologies to improve rehabilitation and decision making. My 
@@ -72,9 +74,9 @@
                   </div>
                   <div class="col-9 col-md-10">
                     <p id="cvHead" class="lead text-justify"> ***FIRST LINE***</p>
-                    <p class="font-weight-light"><i class="fas fa-caret-right"></i> ***ANY OTHER TEXT***</p>
-                    <p class="font-weight-light"><i class="fas fa-caret-right"></i> Thesis title : <em>***THESIS/RESEARCH TITLE HERE*** </em></p>
-                    <p class="font-weight-light"><i class="fas fa-caret-right"></i> Project title : <em>***PROJECT TITLE HERE*** </em></p>
+                    <p class="text-muted"><i class="fas fa-caret-right"></i> ***ANY OTHER TEXT***</p>
+                    <p class="text-muted"><i class="fas fa-caret-right"></i> Thesis title : <em>***THESIS/RESEARCH TITLE HERE*** </em></p>
+                    <p class="text-muted"><i class="fas fa-caret-right"></i> Project title : <em>***PROJECT TITLE HERE*** </em></p>
                   </div>
                 </div> 
 -->
@@ -97,8 +99,8 @@
                   </div>
                   <div class="col-9 col-md-10">
                     <p id="cvHead" class="lead text-justify">Ph.D. in Engineering, JADAVPUR UNIVERSITY, KOLKATA, India</p>
-                    <p class="font-weight-light"><i class="fas fa-caret-right"></i> Thesis title : <em>Human-Computer Interface for Motion Control of Artificial Limb(s)</em></p>
-                    <p class="font-weight-light"><i class="fas fa-caret-right"></i> Supervisors : Prof. Amit Konar and Prof. D.N. Tibarewala</p>
+                    <p class="text-muted"><i class="fas fa-caret-right"></i> Thesis title : <em>Human-Computer Interface for Motion Control of Artificial Limb(s)</em></p>
+                    <p class="text-muted"><i class="fas fa-caret-right"></i> Supervisors : Prof. Amit Konar and Prof. D.N. Tibarewala</p>
                   </div>
                 </div>
                 <div id="cvText" class="row mb-5">
@@ -108,10 +110,10 @@
                   </div>
                   <div class="col-9 col-md-10">
                     <p id="cvHead" class="lead text-justify">Master of Engineering in Biomedical Engineering, JADAVPUR UNIVERSITY, KOLKATA, India</p>
-                    <p class="font-weight-light"><i class="fas fa-caret-right"></i> Percentage of Marks : 80.00%</p>
-                    <p class="font-weight-light"><i class="fas fa-caret-right"></i> Thesis title : <em>Motor Execution and Imagery Classifications from Electroencephalography Signals for Neuroprosthetic
+                    <p class="text-muted"><i class="fas fa-caret-right"></i> Percentage of Marks : 80.00%</p>
+                    <p class="text-muted"><i class="fas fa-caret-right"></i> Thesis title : <em>Motor Execution and Imagery Classifications from Electroencephalography Signals for Neuroprosthetic
                       Applications</em></p>
-                    <p class="font-weight-light"><i class="fas fa-caret-right"></i> Supervisors : Prof. Amit Konar and Prof. D.N. Tibarewala</p>
+                    <p class="text-muted"><i class="fas fa-caret-right"></i> Supervisors : Prof. Amit Konar and Prof. D.N. Tibarewala</p>
                   </div>
                 </div>
                 <div id="cvText" class="row">
@@ -122,10 +124,10 @@
                   <div class="col-9 col-md-10">
                     <p id="cvHead" class="lead text-justify">Bachelor of Technology in Biomedical Engineering, WEST BENGAL UNIVERSITY OF TECHNOLOGY, India
                     </p>
-                    <p class="font-weight-light"><i class="fas fa-caret-right"></i> DGPA : 8.6</p>
-                    <p class="font-weight-light"><i class="fas fa-caret-right"></i> Thesis title : <em>Characterization of Heart Rate Variability among the Tea Garden Workers in the North Eastern
+                    <p class="text-muted"><i class="fas fa-caret-right"></i> DGPA : 8.6</p>
+                    <p class="text-muted"><i class="fas fa-caret-right"></i> Thesis title : <em>Characterization of Heart Rate Variability among the Tea Garden Workers in the North Eastern
                       Hilly Region of West Bengal</em></p>
-                      <p class="font-weight-light"><i class="fas fa-caret-right"></i> Supervisors : Dr. Ankur Ganguly</p>
+                      <p class="text-muted"><i class="fas fa-caret-right"></i> Supervisors : Dr. Ankur Ganguly</p>
                   </div>
                 </div>
               </div>
@@ -151,20 +153,6 @@
                     <p class="font-weight-light"><i class="fas fa-caret-right"></i> Thesis title : <em> </em></p>
                   </div>
                 </div>
-              </div>
-            </div>
-          </div>
-          <div class="card">
-            <div class="card-header" id="headingThree">
-              <h2 class="mb-0">
-                <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                  <i class="fas fa-chalkboard"></i> TEACHING EXPERIENCE
-                </button>
-              </h2>
-            </div>
-            <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
-              <div class="card-body">
-                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
               </div>
             </div>
           </div>
