--- a/teaching.html
+++ b/teaching.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
     <!--Google Fonts-->
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@600&family=Raleway:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style/style.css">
@@ -16,7 +16,7 @@
   <body>
     <!-- NAVBAR -->
     <nav id="mainNavbar" class="navbar navbar-dark navbar-expand-md py-0 fixed-top">
-      <a class="navbar-brand" href="home.html">SB</a>
+      <a class="navbar-brand" href="index.html">SB</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -24,7 +24,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mx-auto">
           <li class="nav-item">
-            <a class="nav-link" href="home.html">Saugat's Homepage<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="index.html">Saugat's Homepage<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="cv.html">Curriculum Vitae</a>
@@ -57,6 +57,105 @@
           </li>
       </div>
     </nav>
+    <!--
+      Tempelate to add new data
+      <div class="row mb-5">
+        <div class="col-3 col-md-2 border-dark border-right">
+          <p class="font-weight-bold d-flex justify-content-end">***DATE***</p>
+        </div>
+        <div class="col-9 col-md-10">
+          <p id="cvHead" class="lead text-justify"> ***FIRST LINE***</p>
+          <p class="text-muted"><i class="fas fa-caret-right"></i> ***OTHER TEXT***</p>
+        </div>
+      </div>
+      You can copy individual lines too if multiple data needs to be added
+    -->
+
+    <div class="container-fluid mt-5">
+    <h1 class="display-3 mb-3 d-flex justify-content-center">Teaching</h1>
+    <hr class="style-two">
+    <!--Add new data from here-->
+
+      <div class="row mb-5">
+        <div class="col-3 col-md-2 border-dark border-right">
+          <p class="font-weight-bold d-flex justify-content-end">Autumn 2019</p>
+        </div>
+        <div class="col-9 col-md-10">
+          <p id="cvHead" class="lead text-justify"> Graduate Laboratory Assistant, UNIVERSITY OF ESSEX, United Kingdom</p>
+          <p class="text-muted"><i class="fas fa-caret-right"></i> CE151 : Introduction to Programming</p>
+          <p class="text-muted"><i class="fas fa-caret-right"></i> CE320 : Large Scale Software Systems and Extreme Programming</p>
+        </div>
+      </div>
+
+      <div class="row mb-5">
+        <div class="col-3 col-md-2 border-dark border-right">
+          <p class="font-weight-bold d-flex justify-content-end">Autumn 2016 </p>
+        </div>
+        <div class="col-9 col-md-10">
+          <p id="cvHead" class="lead text-justify"> Visiting Lecturer, UNIVERSITÉ DE MONTPELLIER II, France</p>
+          <p class="text-muted"><i class="fas fa-caret-right"></i> HMESN321 : Introduction to Brain-computer Interfacing, Neuroprostheses II</p>
+          <p class="text-muted"><i class="fas fa-caret-right"></i> Master STIC (Equivalent to Master of Engineering course)</p>
+        </div>
+      </div>
+
+      <div class="row mb-5">
+        <div class="col-3 col-md-2 border-dark border-right">
+          <p class="font-weight-bold d-flex justify-content-end">2012</p>
+          <p class="font-weight-bold d-flex justify-content-end">2015</p>
+        </div>
+        <div class="col-9 col-md-10">
+          <p id="cvHead" class="lead text-justify"> Mentor, JADAVPUR UNIVERSITY, Kolkata, India</p>
+          <p class="text-muted"><i class="fas fa-caret-right"></i> Mentored numerous under-graduate and post-graduate students on the methodologies and experimental protocols prevalent in Brain-computer Interfacing.</p>
+        </div>
+      </div>
+
+      <div class="row mb-5">
+        <div class="col-3 col-md-2 border-dark border-right">
+          <p class="font-weight-bold d-flex justify-content-end">2012</p>
+          <p class="font-weight-bold d-flex justify-content-end">2014</p>
+        </div>
+        <div class="col-9 col-md-10">
+          <p id="cvHead" class="lead text-justify">Visiting Lecturer, M.Tech Course in Intelligent Automation And Robotics, Department of Electronics & Telecommunication Engineering, JADAVPUR UNIVERSITY, Kolkata, India</p>
+          <p class="text-muted"><i class="fas fa-caret-right"></i> Advanced Digital Signal Processing</p>
+          <p class="text-muted"><i class="fas fa-caret-right"></i> Digital Image and Speech Processing</p>
+        </div>
+      </div>
+
+      <div class="row mb-5">
+        <div class="col-3 col-md-2 border-dark border-right">
+          <p class="font-weight-bold d-flex justify-content-end">Spring 2014</p>
+        </div>
+        <div class="col-9 col-md-10">
+          <p id="cvHead" class="lead text-justify"> Teaching Assistant, M.E. Course in Biomedical Engineering, School of Bioscience & Engineering, JADAVPUR UNIVERSITY, Kolkata, India</p>
+          <p class="text-muted"><i class="fas fa-caret-right"></i> Medical Imaging and Image Processing</p>
+        </div>
+      </div>
+
+      <div class="row mb-5">
+        <div class="col-3 col-md-2 border-dark border-right">
+          <p class="font-weight-bold d-flex justify-content-end">2013</p>
+          <p class="font-weight-bold d-flex justify-content-end">2014</p>
+        </div>
+        <div class="col-9 col-md-10">
+          <p id="cvHead" class="lead text-justify"> Lab Instructor, M.Tech Course in Intelligent Automation and Robotics, Department of Electronics & Telecommunication Engineering, JADAVPUR UNIVERSITY, Kolkata, India</p>
+          <p class="text-muted"><i class="fas fa-caret-right"></i> Digital Control Lab</p>
+          <p class="text-muted"><i class="fas fa-caret-right"></i> A.I. and Robotics Lab</p>
+        </div>
+      </div>
+
+      <div class="row mb-5">
+        <div class="col-3 col-md-2 border-dark border-right">
+          <p class="font-weight-bold d-flex justify-content-end">2012</p>
+          <p class="font-weight-bold d-flex justify-content-end">2014</p>
+        </div>
+        <div class="col-9 col-md-10">
+          <p id="cvHead" class="lead text-justify"> Lab Instructor, M.E. Course in Biomedical Engineering, School of Bioscience & Engineering, JADAVPUR UNIVERSITY, Kolkata, India</p>
+          <p class="text-muted"><i class="fas fa-caret-right"></i> Bio-instrumentation & Programming Lab</p>
+        </div>
+      </div>
+    </div>
+
+    
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
