--- a/cv.html
+++ b/cv.html
@@ -16,7 +16,7 @@
   <body>
     <!-- NAVBAR -->
     <nav id="mainNavbar" class="navbar navbar-dark navbar-expand-md py-0 fixed-top">
-      <a class="navbar-brand" href="home.html">SB</a>
+      <a class="navbar-brand" href="index.html">SB</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -24,7 +24,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mx-auto">
           <li class="nav-item">
-            <a class="nav-link" href="home.html">Saugat's Homepage<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="index.html">Saugat's Homepage<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item active">
             <a class="nav-link" href="cv.html">Curriculum Vitae</a>
