--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
               <img src="Images/saugatBhattacharyya.jpeg" alt="Saugat Bhattacharyya" class="img-fluid">
             </div>
             <div class="col-12 col-md-7">
-              <h1 class="display-4">Dr. Saugat Bhattacharyya</h1>
+              <h1 class="d-none d-sm-block display-4">Dr. Saugat Bhattacharyya</h1>
+              <h2 class="d-sm-none display-4">Dr. Saugat Bhattacharyya</h2>
               <p class="lead">Lecturer in Computer Science</p>
               <p class="lead">School of Computing, Engineering & Intelligent Systems</p>
               <p><i class="fas fa-map-marker-alt"></i> Ulster University, Londonderry BT48 7JL, UK</p>
