Changed my biography

--- a/index.html
+++ b/index.html
@@ -83,18 +83,29 @@
       </div>
 
       <!-- Other Stuffs-->
-      <p class="lead">Dr. Saugat Bhattacharyya pursued his graduation in Biomedical Engineering from West Bengal University of Technology, 
-        India in the year 2009 followed by post-graduation in Biomedical Engineering from Jadavpur University, Kolkata, India in the year 2011. 
-        He did a Ph.D. internship in the DEMAR project team, INRIA, Montpellier, France in 2014-2015 as part of the Erasmus Mundus-Svaagata 
-        Project Fellowship in 2014. Later, he was awarded his Ph.D. in Biomedical Engineering from Jadavpur University, Kolkata, India in the 
-        year 2015. Subsequently, he joined as a post-doctoral researcher with the BCI-LIFT project, CAMIN project team, INRIA, Montpellier, 
-        France at the end of 2015. Later, he worked in the Decision-Making Lab, BCI-NE Group, School of Computer Science & Electronics 
-        Engineering, University of Essex as a Senior Research Officer from July 2017 to April 2020. Currently he is a Lecturer in Computer 
-        Science in the School of Computing, Engineering & Intelligent Systems. His research interests are in the area of Cognitive Neuroscience, 
-        Artificial Intelligence and Machine Learning and its application in Human-Machine Interaction and Neuro-Rehabilitation. He has experience 
-        in developing intelligent neuro-technologies to improve rehabilitation and decision making. His research is primarily focussed on 
-        developing brain-computer interfacing systems based on robust signal processing, quantitative and machine learning algorithms to draw 
-        inference into an users' state of mind through their neural and other physiological signals. </p>
+      <p class="lead">Dr. Saugat Bhattacharyya is currently a Lecturer in the School of Computing, Engineering & Intelligent 
+        Systems. Before that I was working as a Senior Research Officer in the Brain Computer Interfacing-Neural Engineering Lab, 
+        University of Essex, UK from July 2017 to April 2020 on strategic decision making (for individuals and groups), Collaborative 
+        Brain-computer Interfacing and Human-Machine Teaming. In between November 2015 to July 2017, I was working as post-doctoral 
+        researcher on the BCI-LIFT project at Inria Sophia-Antiplois, France on incorporating Brain-machine Interfacing (BMI) technology into Functional 
+        Electrical Stimulation (FES) based rehabilitation system. I was also a visiting scientist in the University of Montpellier, France
+        from October 2014 to June 2015 where I was implementing Brain-computer Interfacing to control robotic systems. I obtained my Ph.D. 
+        degree on Biomedical Engineering from Jadavpur University (at Kolkata, India) in August, 2015. The main focus of my Ph.D. was 
+        to develop Brain-Machine Interface based control schemes for rehabilitation and robotic applications. Simultaneously, I have 
+        also developed principles and algorithms required for Electroencephalography (EEG) feature selection and classification. 
+        
+        My research interests are in the area of Cognitive and Behavioural  Neuroscience, Artificial Intelligence and Machine 
+        Learning and its application in Human-Machine Interaction and Neuro-Rehabilitation. I have wide expertise in developing 
+        intelligent neuro-technologies to improve rehabilitation and decision making. I currently have published 11 peer-reviewed 
+        journals and over 30 book chapters and conference publications. I have been awarded two fellowships and was a co-PI on one 
+        GCRF research grant. I am also serving as an associate editor in Frontiers in Medical Technology and Frontiers in Neuroscience.
+        In the past, I have served as an associate editor on International Conference on Intelligent Robots and Systems and Journal of
+        Healthcare Engineering. I am an active member of IEEE, IEEE-EMBS, IEEE Brain Community, Brain Computer Interface Society and 
+        the Institute of Engineers (India).  
+
+        I enjoy travelling, reading sci-fi novels and comics and playing football. My favourite authors are J.R.R. Tolkien, 
+        George R.R. Martin, Isaac Asimov, Arthur Conan Doyle, Victor Hugo and Jules Verne. I am multi-lingual and can speak 
+        English, Hindi, Bengali and Assamese fluently and some French.</p>
     </div>
     
 
