--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
           <li class="nav-item active">
             <a class="nav-link" href="index.html">Saugat's Homepage<span class="sr-only">(current)</span></a>
           </li>
-          <li class="nav-item">
+          <!--<li class="nav-item">
             <a class="nav-link" href="cv.html">Curriculum Vitae</a>
-          </li>
+          </li>-->
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="researchDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Research
@@ -38,7 +38,7 @@
               <a class="dropdown-item" href="publications.html">Publications</a>
               <a class="dropdown-item" href="codes.html">Codes & Softwares</a>
               <a class="dropdown-item" href="projects.html">Projects</a>
-              <a class="dropdown-item" href="gallery.html">Gallery</a>
+              <a class="dropdown-item" href="gallery.html">Media</a>
             </div>
           </li>
           <li class="nav-item">
