--- a/journal.html
+++ b/journal.html
@@ -26,9 +26,9 @@
           <li class="nav-item">
             <a class="nav-link" href="index.html">Saugat's Homepage<span class="sr-only">(current)</span></a>
           </li>
-          <li class="nav-item">
+          <!--<li class="nav-item">
             <a class="nav-link" href="cv.html">Curriculum Vitae</a>
-          </li>
+          </li>-->
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="researchDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Research
