Some changes in the publication

--- a/publications.html
+++ b/publications.html
@@ -2,6 +2,11 @@
 <html lang="en">
   <head>
     <!-- Required meta tags -->
+    <style>
+      .nolist {
+        list-style: none;
+      }
+    </style>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -102,6 +107,11 @@
                       Patients’ for Neuro-Rehabilitation Application</em>, Accepted in : IEEE World Congress on Computational Intelligence (WCCI) 
                       2020, Glasgow, UK.</p>
                     </li>
+                    <li>
+                      <p class="text-muted">H. Raza, A. Chowdhury, S. Bhattacharyya, and Spyros Samothrakis <em>Single-Trial EEG 
+                      Classification with EEGNet and Neural Structured Learning for Improving BCI Performance</em>, Accepted in : IEEE World Congress on Computational Intelligence (WCCI) 
+                      2020, Glasgow, UK.</p>
+                    </li>
                   </ol>
                 </div>
               </div>
@@ -112,11 +122,6 @@
                 </div>
                 <div class="col-10 col-md-11">
                   <ol>
-                    <li>
-                      <p class="text-muted">H. Raza, A. Chowdhury, S. Bhattacharyya, and Spyros Samothrakis <em>Single-Trial EEG 
-                        Classification with EEGNet and Neural Structured Learning for Improving BCI Performance</em>, Accepted in : IEEE
-                        World Congress on Computational Intelligence (WCCI) 2020, Glasgow, UK.</p>
-                    </li>
                     <li>
                       <p class="text-muted">S. Bhattacharyya, D. Valeriani, C. Cinel, L.Citi and R. Poli (2019) <em>Collaborative Brain-Computer 
                         Interfaces to Enhance Group Decisions in an Outpost Surveillance Task</em>, In : 41st Annual International Conference of the 
