--- a/teaching.html
+++ b/teaching.html
@@ -78,6 +78,17 @@
 
       <div class="row mb-5">
         <div class="col-3 col-md-2 border-dark border-right">
+          <p class="font-weight-bold d-flex justify-content-end">2020-2021 (Upcoming)</p>
+        </div>
+        <div class="col-9 col-md-10">
+          <p id="cvHead" class="lead text-justify"> Lecturer, ULSTER UNIVERSITY, United Kingdom</p>
+          <p class="text-muted"><i class="fas fa-caret-right"></i> COM808 : Operating Systems</p>
+          <p class="text-muted"><i class="fas fa-caret-right"></i> COM561 : Concurrent and Distributed Systems</p>
+        </div>
+      </div>
+
+      <div class="row mb-5">
+        <div class="col-3 col-md-2 border-dark border-right">
           <p class="font-weight-bold d-flex justify-content-end">Autumn 2019</p>
         </div>
         <div class="col-9 col-md-10">
@@ -98,6 +109,7 @@
         </div>
       </div>
 
+      <!--
       <div class="row mb-5">
         <div class="col-3 col-md-2 border-dark border-right">
           <p class="font-weight-bold d-flex justify-content-end">2012</p>
@@ -108,6 +120,7 @@
           <p class="text-muted"><i class="fas fa-caret-right"></i> Mentored numerous under-graduate and post-graduate students on the methodologies and experimental protocols prevalent in Brain-computer Interfacing.</p>
         </div>
       </div>
+      -->
 
       <div class="row mb-5">
         <div class="col-3 col-md-2 border-dark border-right">
