--- a/index.html
+++ b/index.html
@@ -115,14 +115,16 @@
                     developed principles and algorithms required for Electroencephalography (EEG) feature selection and
                     classification. My research interests are in the area of Cognitive and Behavioural Neuroscience,
                     Artificial Intelligence and Machine Learning and its application in Human-Machine Interaction and
-                    Neuro-Rehabilitation. I have wide expertise in developing intelligent neuro-technologies to improve
+                    Neuro-Rehabilitation.</p>
+                <p> I have wide expertise in developing intelligent neuro-technologies to improve
                     rehabilitation and decision making. I currently have published 11 peer-reviewed journals and over 30
                     book chapters and conference publications. I have been awarded two fellowships and was a co-PI on one
                     GCRF research grant. I am also serving as an associate editor in Frontiers in Medical Technology and
                     Frontiers in Neuroscience. In the past, I have served as an associate editor on International Conference
                     on Intelligent Robots and Systems and Journal of Healthcare Engineering. I am an active member of IEEE,
                     IEEE-EMBS, IEEE Brain Community, Brain Computer Interface Society and the Institute of Engineers
-                    (India). I enjoy travelling, reading sci-fi novels and comics and playing football. My favourite authors
+                    (India).</p>
+                    <p>I enjoy travelling, reading sci-fi novels and comics and playing football. My favourite authors
                     are J.R.R. Tolkien, George R.R. Martin, Isaac Asimov, Arthur Conan Doyle, Victor Hugo and Jules Verne. I
                     am multi-lingual and can speak English, Hindi, Bengali and Assamese fluently and some French.</p>
             </div>
