--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <title>Homepage</title>
 
     <!-- Bootstrap CSS CDN -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <!-- Our Custom CSS -->
     <link rel="stylesheet" href="style/styles.css">
 
@@ -29,8 +30,8 @@
         <!-- Sidebar Holder -->
         <nav id="sidebar">
             <div class="sidebar-header">
-                <div class="media d-flex align-items-center">
-                    <img class="mr-3 rounded-circle img-thumbnail shadow-sm" src="Images/saugatBhattacharyya.jpeg"
+                <div class="media d-flex align-items-end">
+                    <img class="mr-3 img-thumbnail shadow-sm roundimg" src="Images/saugatBhattacharyya.jpeg"
                         alt="Saugat Bhattacharyya">
                 </div>
                 <p class="h3">Saugat Bhattacharyya</p>
@@ -101,42 +102,59 @@
             <h1 class="d-flex justify-content-center display-4">About Me</h1>
             <div class="line"></div>
             <div class="container mr-auto">
-                <p>I am currently a Lecturer in the School of Computing, Engineering & Intelligent Systems. Before that I
+                <p>I am currently a Lecturer in the School of Computing, Engineering & Intelligent Systems. Before that
+                    I
                     was working as a Senior Research Officer in the Brain Computer Interfacing-Neural Engineering Lab,
-                    University of Essex, UK from July 2017 to April 2020 on strategic decision making (for individuals and
-                    groups), Collaborative Brain-computer Interfacing and Human-Machine Teaming. In between November 2015 to
-                    July 2017, I was working as post-doctoral researcher on the BCI-LIFT project at Inria Sophia-Antiplois,
+                    University of Essex, UK from July 2017 to April 2020 on strategic decision making (for individuals
+                    and
+                    groups), Collaborative Brain-computer Interfacing and Human-Machine Teaming. In between November
+                    2015 to
+                    July 2017, I was working as post-doctoral researcher on the BCI-LIFT project at Inria
+                    Sophia-Antiplois,
                     France on incorporating Brain-machine Interfacing (BMI) technology into Functional Electrical
                     Stimulation (FES) based rehabilitation system. I was also a visiting scientist in the University of
-                    Montpellier, France from October 2014 to June 2015 where I was implementing Brain-computer Interfacing
+                    Montpellier, France from October 2014 to June 2015 where I was implementing Brain-computer
+                    Interfacing
                     to control robotic systems. I obtained my Ph.D. degree on Biomedical Engineering from Jadavpur
-                    University (at Kolkata, India) in August, 2015. The main focus of my Ph.D. was to develop Brain-Machine
-                    Interface based control schemes for rehabilitation and robotic applications. Simultaneously, I have also
+                    University (at Kolkata, India) in August, 2015. The main focus of my Ph.D. was to develop
+                    Brain-Machine
+                    Interface based control schemes for rehabilitation and robotic applications. Simultaneously, I have
+                    also
                     developed principles and algorithms required for Electroencephalography (EEG) feature selection and
                     classification. My research interests are in the area of Cognitive and Behavioural Neuroscience,
                     Artificial Intelligence and Machine Learning and its application in Human-Machine Interaction and
                     Neuro-Rehabilitation.</p>
                 <p> I have wide expertise in developing intelligent neuro-technologies to improve
                     rehabilitation and decision making. I currently have published 11 peer-reviewed journals and over 30
-                    book chapters and conference publications. I have been awarded two fellowships and was a co-PI on one
+                    book chapters and conference publications. I have been awarded two fellowships and was a co-PI on
+                    one
                     GCRF research grant. I am also serving as an associate editor in Frontiers in Medical Technology and
-                    Frontiers in Neuroscience. In the past, I have served as an associate editor on International Conference
-                    on Intelligent Robots and Systems and Journal of Healthcare Engineering. I am an active member of IEEE,
+                    Frontiers in Neuroscience. In the past, I have served as an associate editor on International
+                    Conference
+                    on Intelligent Robots and Systems and Journal of Healthcare Engineering. I am an active member of
+                    IEEE,
                     IEEE-EMBS, IEEE Brain Community, Brain Computer Interface Society and the Institute of Engineers
                     (India).</p>
-                    <p>I enjoy travelling, reading sci-fi novels and comics and playing football. My favourite authors
-                    are J.R.R. Tolkien, George R.R. Martin, Isaac Asimov, Arthur Conan Doyle, Victor Hugo and Jules Verne. I
+                <p>I enjoy travelling, reading sci-fi novels and comics and playing football. My favourite authors
+                    are J.R.R. Tolkien, George R.R. Martin, Isaac Asimov, Arthur Conan Doyle, Victor Hugo and Jules
+                    Verne. I
                     am multi-lingual and can speak English, Hindi, Bengali and Assamese fluently and some French.</p>
             </div>
         </div>
     </div>
 
     <!-- jQuery CDN - Slim version (=without AJAX) -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
     <!-- Popper.JS -->
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
     <!-- Bootstrap JS -->
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+        crossorigin="anonymous"></script>
 
     <script type="text/javascript">
         $(document).ready(function () {
