--- a/conference.html
+++ b/conference.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>Codes & Softwares</title>
+    <title>Upcoming Conferences</title>
 
     <!-- Bootstrap CSS CDN -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
@@ -47,7 +47,7 @@
                         <li>
                             <a href="publications.html">Publications</a>
                         </li>
-                        <li class="active">
+                        <li>
                             <a href="codes.html">Codes & Softwares</a>
                         </li>
                         <li>
@@ -65,7 +65,7 @@
                     <a href="#communitySubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">BCI
                         Community</a>
                     <ul class="collapse list-unstyled" id="communitySubmenu">
-                        <li>
+                        <li class="active">
                             <a href="conference.html">Upcoming Conferences</a>
                         </li>
                         <li>
@@ -99,7 +99,7 @@
                 </button>
             </div> -->
             </div>
-            <h1 class="d-flex justify-content-center display-4">Codes & Softwares</h1>
+            <h1 class="d-flex justify-content-center display-4">Upcoming Conferences</h1>
             <div class="line"></div>
         </div>
     </div>
