--- a/contact.html
+++ b/contact.html
@@ -6,12 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>Codes & Softwares</title>
+    <title>Contact</title>
 
     <!-- Bootstrap CSS CDN -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <!-- Our Custom CSS -->
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
+    
+        <!-- Our Custom CSS -->
     <link rel="stylesheet" href="style/styles.css">
 
     <!-- Font Awesome JS -->
@@ -47,7 +49,7 @@
                         <li>
                             <a href="publications.html">Publications</a>
                         </li>
-                        <li class="active">
+                        <li>
                             <a href="codes.html">Codes & Softwares</a>
                         </li>
                         <li>
@@ -82,7 +84,7 @@
                         </li>
                     </ul>
                 </li>
-                <li>
+                <li class="active">
                     <a href="contact.html">Contact</a>
                 </li>
             </ul>
@@ -99,8 +101,22 @@
                 </button>
             </div> -->
             </div>
-            <h1 class="d-flex justify-content-center display-4">Codes & Softwares</h1>
+            <h1 class="d-flex justify-content-center display-4">Contact</h1>
             <div class="line"></div>
+            <div class="jumbotron jumbotron-fluid">
+                <div class="container ml-5 pr-5 background-primary">
+                    <div>
+                      <h1 class=" display-5">Dr. Saugat Bhattacharyya</h1>
+                      <p class="lead">Lecturer in Computer Science</p>
+                      <p class="lead">School of Computing, Engineering & Intelligent Systems</p>
+                      <p><i class="fas fa-map-marker-alt"></i> Ulster University, Londonderry BT48 7JL, UK</p>
+                      <p><i class="fas fa-phone"></i> +44 2871 675 357</p>
+                      <hr class="my-4">
+                      <a href="https://www.github.com/saugatbh"><i class="fab fa-github"></i> github.com/saugatbh</a></br>
+                      <a href="mailto:s.bhattacharyya@ulster.ac.uk"><i class="fas fa-at"></i> s.bhattacharyya@ulster.ac.uk</a>
+                    </div>
+                  
+                </div>
         </div>
     </div>
 
