--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                             <a href="community.html">Community Links</a>
                         </li>
                         <li>
-                            <a href="labs.html">labs involved in BCI Research</a>
+                            <a href="labs.html">Labs involved in BCI Research</a>
                         </li>
                     </ul>
                 </li>
