--- a/media.html
+++ b/media.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>Codes & Softwares</title>
+    <title>Media</title>
 
     <!-- Bootstrap CSS CDN -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
@@ -47,13 +47,13 @@
                         <li>
                             <a href="publications.html">Publications</a>
                         </li>
-                        <li class="active">
+                        <li>
                             <a href="codes.html">Codes & Softwares</a>
                         </li>
                         <li>
                             <a href="projects.html">Projects</a>
                         </li>
-                        <li>
+                        <li class="active">
                             <a href="media.html">Media</a>
                         </li>
                     </ul>
@@ -99,7 +99,7 @@
                 </button>
             </div> -->
             </div>
-            <h1 class="d-flex justify-content-center display-4">Codes & Softwares</h1>
+            <h1 class="d-flex justify-content-center display-4">Media</h1>
             <div class="line"></div>
         </div>
     </div>
