--- a/community.html
+++ b/community.html
@@ -31,7 +31,7 @@
         <nav id="sidebar">
             <div class="sidebar-header">
                 <div class="media d-flex align-items-end">
-                    <img class="mr-3 img-thumbnail shadow-sm roundimg" src="Images/saugatBhattacharyya.jpeg"
+                    <img class="mr-3 rounded-circle img-thumbnail shadow-sm" src="Images/saugatBhattacharyya.jpeg"
                         alt="Saugat Bhattacharyya">
                 </div>
                 <p class="h3">Saugat Bhattacharyya</p>
@@ -91,15 +91,12 @@
         <!-- Page Content Holder -->
         <div id="content">
             <div class="container-fluid">
-                <!-- <div class="d-lg-none d-xl-block">
-                <button type="button" id="sidebarCollapse" class="navbar-btn">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </button>
-            </div> -->
             </div>
-            <h1 class="d-flex justify-content-center display-4">Community Links</h1>
+            <div class="row">
+                <h1 class="d-flex justify-content-center align-self-center display-3 col-12 col-md-8">Community Links
+                </h1>
+                <img class="media d-flex align-items-start d-none d-md-block col-md-3" src="Images/brain.jpg">
+            </div>
             <div class="line"></div>
         </div>
     </div>
