--- a/publications.html
+++ b/publications.html
@@ -31,7 +31,7 @@
         <nav id="sidebar">
             <div class="sidebar-header">
                 <div class="media d-flex align-items-end">
-                    <img class="mr-3 img-thumbnail shadow-sm roundimg" src="Images/saugatBhattacharyya.jpeg"
+                    <img class="mr-3 rounded-circle img-thumbnail shadow-sm" src="Images/saugatBhattacharyya.jpeg"
                         alt="Saugat Bhattacharyya">
                 </div>
                 <p class="h3">Saugat Bhattacharyya</p>
@@ -90,7 +90,10 @@
 
         <!-- Page Content Holder -->
         <div id="content">
-            <h1 class="d-flex justify-content-center display-4">Publications</h1>
+            <div class="row">
+                <h1 class="d-flex justify-content-center align-self-center display-3 col-12 col-md-8">Publications</h1>
+                    <img class="media d-flex align-items-start d-none d-md-block col-md-3" src="Images/brain.jpg">
+            </div>
             <div class="line"></div>
             <div class="accordion" id="accordionExample">
                 <div class="card">
