--- a/contact.html
+++ b/contact.html
@@ -11,9 +11,9 @@
     <!-- Bootstrap CSS CDN -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
-    
-        <!-- Our Custom CSS -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
+
+    <!-- Our Custom CSS -->
     <link rel="stylesheet" href="style/styles.css">
 
     <!-- Font Awesome JS -->
@@ -33,7 +33,7 @@
         <nav id="sidebar">
             <div class="sidebar-header">
                 <div class="media d-flex align-items-end">
-                    <img class="mr-3 img-thumbnail shadow-sm roundimg" src="Images/saugatBhattacharyya.jpeg"
+                    <img class="mr-3 rounded-circle img-thumbnail shadow-sm" src="Images/saugatBhattacharyya.jpeg"
                         alt="Saugat Bhattacharyya">
                 </div>
                 <p class="h3">Saugat Bhattacharyya</p>
@@ -93,54 +93,52 @@
         <!-- Page Content Holder -->
         <div id="content">
             <div class="container-fluid">
-                <!-- <div class="d-lg-none d-xl-block">
-                <button type="button" id="sidebarCollapse" class="navbar-btn">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </button>
-            </div> -->
             </div>
-            <h1 class="d-flex justify-content-center display-4">Contact</h1>
+            <div class="row">
+                <h1 class="d-flex justify-content-center align-self-center display-3 col-12 col-md-8">Contact</h1>
+                <img class="media d-flex align-items-start d-none d-md-block col-md-3" src="Images/brain.jpg">
+            </div>
             <div class="line"></div>
             <div class="jumbotron jumbotron-fluid">
                 <div class="container ml-5 pr-5 background-primary">
                     <div>
-                      <h1 class=" display-5">Dr. Saugat Bhattacharyya</h1>
-                      <p class="lead">Lecturer in Computer Science</p>
-                      <p class="lead">School of Computing, Engineering & Intelligent Systems</p>
-                      <p><i class="fas fa-map-marker-alt"></i> Ulster University, Londonderry BT48 7JL, UK</p>
-                      <p><i class="fas fa-phone"></i> +44 2871 675 357</p>
-                      <hr class="my-4">
-                      <a href="https://www.github.com/saugatbh"><i class="fab fa-github"></i> github.com/saugatbh</a></br>
-                      <a href="mailto:s.bhattacharyya@ulster.ac.uk"><i class="fas fa-at"></i> s.bhattacharyya@ulster.ac.uk</a>
+                        <h1 class=" display-5">Dr. Saugat Bhattacharyya</h1>
+                        <p class="lead">Lecturer in Computer Science</p>
+                        <p class="lead">School of Computing, Engineering & Intelligent Systems</p>
+                        <p><i class="fas fa-map-marker-alt"></i> Ulster University, Londonderry BT48 7JL, UK</p>
+                        <p><i class="fas fa-phone"></i> +44 2871 675 357</p>
+                        <hr class="my-4">
+                        <a href="https://www.github.com/saugatbh"><i class="fab fa-github"></i>
+                            github.com/saugatbh</a></br>
+                        <a href="mailto:s.bhattacharyya@ulster.ac.uk"><i class="fas fa-at"></i>
+                            s.bhattacharyya@ulster.ac.uk</a>
                     </div>
-                  
+
                 </div>
+            </div>
         </div>
-    </div>
 
-    <!-- jQuery CDN - Slim version (=without AJAX) -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <!-- Popper.JS -->
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous"></script>
-    <!-- Bootstrap JS -->
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-        crossorigin="anonymous"></script>
+        <!-- jQuery CDN - Slim version (=without AJAX) -->
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+            crossorigin="anonymous"></script>
+        <!-- Popper.JS -->
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+            integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+            crossorigin="anonymous"></script>
+        <!-- Bootstrap JS -->
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+            integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+            crossorigin="anonymous"></script>
 
-    <script type="text/javascript">
-        $(document).ready(function () {
-            $('#sidebarCollapse').on('click', function () {
-                $('#sidebar').toggleClass('active');
-                $(this).toggleClass('active');
+        <script type="text/javascript">
+            $(document).ready(function () {
+                $('#sidebarCollapse').on('click', function () {
+                    $('#sidebar').toggleClass('active');
+                    $(this).toggleClass('active');
+                });
             });
-        });
-    </script>
+        </script>
 </body>
 
 </html>
